add basic header

--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -1,10 +1,17 @@
 header {
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  padding: 16px 0;
-  width: 100%;
+
+  @apply fixed;
+
+  @apply z-10;
+
+  @apply top-0;
+
+  @apply left-0;
+
+  @apply py-4;
+
+  @apply w-full;
+
   background: rgba(0, 30, 38, .8);
   border-bottom: 1px solid #203247;
   backdrop-filter: blur(12px);
