--- a/components/Nav/Nav.scss
+++ b/components/Nav/Nav.scss
@@ -1,4 +1,4 @@
-.lang-switcher {
+.main-nav {
 
   &__link {
 
@@ -10,7 +10,10 @@
 
     @apply font-normal;
 
-    &.is-active,
+    @apply block;
+
+    @apply px-4;
+
     &:hover {
 
       @apply text-primary;
