add some content

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,3 +1,7 @@
 @import 'global/global-scaffolding';
 
 @import 'global/global-typo';
+
+@import 'plugins/plugins-rewrite';
+
+@import 'components/btn';
