--- a/assets/styles/global/global-scaffolding.scss
+++ b/assets/styles/global/global-scaffolding.scss
@@ -7,9 +7,12 @@ html {
 }
 
 body {
+
+  @apply font-sans;
+
   font-size: 16px;
   line-height: 1.2;
-  font-weight: 500;
+  font-weight: 400;
   -webkit-font-smoothing: antialiased;
 }
 
