--- a/assets/styles/global/global-scaffolding.scss
+++ b/assets/styles/global/global-scaffolding.scss
@@ -4,6 +4,10 @@ html {
 
   height: 100%;
   min-height: 100%;
+  //overflow: hidden;
+
+  --scrollbarBG: #001E26;
+  --thumbBG: #255461;
 }
 
 body {
@@ -14,6 +18,23 @@ body {
   line-height: 1.2;
   font-weight: 400;
   -webkit-font-smoothing: antialiased;
+  //overflow-y: scroll;
+  scrollbar-width: thin;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+
+  &::-webkit-scrollbar {
+    width: 11px;
+  }
+
+  &::-webkit-scrollbar-track {
+    background: var(--scrollbarBG);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: var(--thumbBG) ;
+    border: 3px solid var(--scrollbarBG);
+    border-radius: 6px;
+  }
 }
 
 body, #__nuxt, #__layout, .wrapper {
