--- a/components/Hero/Hero.scss
+++ b/components/Hero/Hero.scss
@@ -1,21 +1,15 @@
 .hero {
-  overflow: hidden;
-  width: 100%;
-  height: 100vh;
-
-  @apply bg-secondary;
-
-  @apply relative;
-
   /*@media only screen and (min-width: theme('screens.xl')) {
     min-height: 500px;
   }*/
 
   &__bg {
-    width: 100%;
-    height: 100%;
     object-fit: cover;
     object-position: center;
+
+    @apply w-full;
+
+    @apply h-full;
 
     @apply absolute;
 
